src/lexer/snapshots/python_lsp__lexer__tests__fstring_prefix.snap
---
source: src/lexer/mod.rs
expression: "LexerDebug::new(&lexer, source)"
---
[
    "f\"" FStringStart 0..2,
    "\"" FStringEnd 2..3,
    "F\"" FStringStart 4..6,
    "\"" FStringEnd 6..7,
    "rf\"" FStringStart 8..11,
    "\"" FStringEnd 11..12,
    "rF\"" FStringStart 13..16,
    "\"" FStringEnd 16..17,
    "Rf\"" FStringStart 18..21,
    "\"" FStringEnd 21..22,
    "RF\"" FStringStart 23..26,
    "\"" FStringEnd 26..27,
    "fr\"" FStringStart 28..31,
    "\"" FStringEnd 31..32,
    "Fr\"" FStringStart 33..36,
    "\"" FStringEnd 36..37,
    "fR\"" FStringStart 38..41,
    "\"" FStringEnd 41..42,
    "FR\"" FStringStart 43..46,
    "\"" FStringEnd 46..47,
    "" NewLine 47..47,
]
