src/lexer/snapshots/python_lsp__lexer__tests__fstring_single_quote_escape_unix_eol.snap
---
source: src/lexer/mod.rs
expression: "LexerDebug::new(&lexer, &source)"
---
[
    "f'" FStringStart 0..2,
    "text \\\n more text" FStringMiddle { is_raw: false } 2..19,
    "'" FStringEnd 19..20,
    "" NewLine 20..20,
]
