src/lexer/snapshots/python_lsp__lexer__tests__fstring_single_quote_escape_windows_eol.snap
---
source: src/lexer/mod.rs
expression: "LexerDebug::new(&lexer, &source)"
---
[
    "f'" FStringStart 0..2,
    "text \\\r\n more text" FStringMiddle { is_raw: false } 2..20,
    "'" FStringEnd 20..21,
    "" NewLine 21..21,
]
