src/lexer/snapshots/python_lsp__lexer__tests__fstring_with_format_spec.snap
---
source: src/lexer/mod.rs
expression: "LexerDebug::new(&lexer, source)"
---
[
    "f\"" FStringStart 0..2,
    "{" OpenBrace 2..3,
    "foo" Id 3..6,
    ":" Colon 6..7,
    "}" CloseBrace 7..8,
    " " FStringMiddle { is_raw: false } 8..9,
    "{" OpenBrace 9..10,
    "x" Id 10..11,
    "=" Operator(Assign) 11..12,
    "!" Exclamation 12..13,
    "s" Id 13..14,
    ":" Colon 14..15,
    ".3f" FStringMiddle { is_raw: false } 15..18,
    "}" CloseBrace 18..19,
    " " FStringMiddle { is_raw: false } 19..20,
    "{" OpenBrace 20..21,
    "x" Id 21..22,
    ":" Colon 22..23,
    "." FStringMiddle { is_raw: false } 23..24,
    "{" OpenBrace 24..25,
    "y" Id 25..26,
    "}" CloseBrace 26..27,
    "f" FStringMiddle { is_raw: false } 27..28,
    "}" CloseBrace 28..29,
    " " FStringMiddle { is_raw: false } 29..30,
    "{" OpenBrace 30..31,
    "''" String { kind: String, is_triple_quote: false } 31..33,
    ":" Colon 33..34,
    "*^" FStringMiddle { is_raw: false } 34..36,
    "{" OpenBrace 36..37,
    "1" Number(Decimal) 37..38,
    ":" Colon 38..39,
    "{" OpenBrace 39..40,
    "1" Number(Decimal) 40..41,
    "}" CloseBrace 41..42,
    "}" CloseBrace 42..43,
    "}" CloseBrace 43..44,
    " " FStringMiddle { is_raw: false } 44..45,
    "{" OpenBrace 45..46,
    "x" Id 46..47,
    ":" Colon 47..48,
    "{" OpenBrace 48..49,
    "{" OpenBrace 49..50,
    "1" Number(Decimal) 50..51,
    "}" CloseBrace 51..52,
    "." Dot 52..53,
    "pop" Id 53..56,
    "(" OpenParenthesis 56..57,
    ")" CloseParenthesis 57..58,
    "}" CloseBrace 58..59,
    "}" CloseBrace 59..60,
    "\"" FStringEnd 60..61,
    "" NewLine 61..61,
]
