src/lexer/snapshots/python_lsp__lexer__tests__fstring_with_lambda_expression.snap
---
source: src/lexer/mod.rs
expression: "LexerDebug::new(&lexer, source)"
---
[
    "f\"" FStringStart 0..2,
    "{" OpenBrace 2..3,
    "lambda" Keyword(Lambda) 3..9,
    "x" Id 10..11,
    ":" Colon 11..12,
    "{" OpenBrace 12..13,
    "x" Id 13..14,
    "}" CloseBrace 14..15,
    "}" CloseBrace 15..16,
    "\"" FStringEnd 16..17,
    "\n" NewLine 17..18,
    "f\"" FStringStart 18..20,
    "{" OpenBrace 20..21,
    "(" OpenParenthesis 21..22,
    "lambda" Keyword(Lambda) 22..28,
    "x" Id 29..30,
    ":" Colon 30..31,
    "{" OpenBrace 31..32,
    "x" Id 32..33,
    "}" CloseBrace 33..34,
    ")" CloseParenthesis 34..35,
    "}" CloseBrace 35..36,
    "\"" FStringEnd 36..37,
    "" NewLine 37..37,
]
