src/lexer/snapshots/python_lsp__lexer__tests__fstring_with_multiline_format_spec.snap
---
source: src/lexer/mod.rs
expression: "LexerDebug::new(&lexer, source)"
---
[
    "f'''" FStringStart 0..4,
    "__" FStringMiddle { is_raw: false } 4..6,
    "{" OpenBrace 6..7,
    "\n" NonLogicalNewline 7..8,
    "x" Id 12..13,
    ":" Colon 13..14,
    "d\n" FStringMiddle { is_raw: false } 14..16,
    "}" CloseBrace 16..17,
    "__" FStringMiddle { is_raw: false } 17..19,
    "'''" FStringEnd 19..22,
    "\n" NewLine 22..23,
    "f'''" FStringStart 23..27,
    "__" FStringMiddle { is_raw: false } 27..29,
    "{" OpenBrace 29..30,
    "\n" NonLogicalNewline 30..31,
    "x" Id 35..36,
    ":" Colon 36..37,
    "a\n        b\n          c\n" FStringMiddle { is_raw: false } 37..61,
    "}" CloseBrace 61..62,
    "__" FStringMiddle { is_raw: false } 62..64,
    "'''" FStringEnd 64..67,
    "\n" NewLine 67..68,
    "f'" FStringStart 68..70,
    "__" FStringMiddle { is_raw: false } 70..72,
    "{" OpenBrace 72..73,
    "\n" NonLogicalNewline 73..74,
    "x" Id 78..79,
    ":" Colon 79..80,
    "d" FStringMiddle { is_raw: false } 80..81,
    "\n" NonLogicalNewline 81..82,
    "}" CloseBrace 82..83,
    "__" FStringMiddle { is_raw: false } 83..85,
    "'" FStringEnd 85..86,
    "\n" NewLine 86..87,
    "f'" FStringStart 87..89,
    "__" FStringMiddle { is_raw: false } 89..91,
    "{" OpenBrace 91..92,
    "\n" NonLogicalNewline 92..93,
    "x" Id 97..98,
    ":" Colon 98..99,
    "a" FStringMiddle { is_raw: false } 99..100,
    "\n" NonLogicalNewline 100..101,
    "b" Id 109..110,
    "\n" NonLogicalNewline 110..111,
    "}" CloseBrace 111..112,
    "__" FStringMiddle { is_raw: false } 112..114,
    "'" FStringEnd 114..115,
    "\n" NewLine 115..116,
]
