src/lexer/snapshots/python_lsp__lexer__tests__fstring_with_named_expression.snap
---
source: src/lexer/mod.rs
expression: "LexerDebug::new(&lexer, source)"
---
[
    "f\"" FStringStart 0..2,
    "{" OpenBrace 2..3,
    "x" Id 3..4,
    ":" Colon 4..5,
    "=10" FStringMiddle { is_raw: false } 5..8,
    "}" CloseBrace 8..9,
    " " FStringMiddle { is_raw: false } 9..10,
    "{" OpenBrace 10..11,
    "(" OpenParenthesis 11..12,
    "x" Id 12..13,
    ":=" Operator(ColonEqual) 13..15,
    "10" Number(Decimal) 15..17,
    ")" CloseParenthesis 17..18,
    "}" CloseBrace 18..19,
    " " FStringMiddle { is_raw: false } 19..20,
    "{" OpenBrace 20..21,
    "x" Id 21..22,
    "," Comma 22..23,
    "{" OpenBrace 23..24,
    "y" Id 24..25,
    ":=" Operator(ColonEqual) 25..27,
    "10" Number(Decimal) 27..29,
    "}" CloseBrace 29..30,
    "}" CloseBrace 30..31,
    " " FStringMiddle { is_raw: false } 31..32,
    "{" OpenBrace 32..33,
    "[" OpenBracket 33..34,
    "x" Id 34..35,
    ":=" Operator(ColonEqual) 35..37,
    "10" Number(Decimal) 37..39,
    "]" CloseBracket 39..40,
    "}" CloseBrace 40..41,
    "\"" FStringEnd 41..42,
    "" NewLine 42..42,
]
