src/lexer/snapshots/python_lsp__lexer__tests__fstring_with_nul_char.snap
---
source: src/lexer/mod.rs
expression: "LexerDebug::new(&lexer, source)"
---
[
    "f'" FStringStart 0..2,
    "\\0" FStringMiddle { is_raw: false } 2..4,
    "'" FStringEnd 4..5,
    "" NewLine 5..5,
]
