src/lexer/snapshots/python_lsp__lexer__tests__lex_assignment.snap
---
source: src/lexer/mod.rs
expression: "LexerDebug::new(&lexer, source)"
---
[
    "a_variable" Id 0..10,
    "=" Operator(Assign) 11..12,
    "99" Number(Decimal) 13..15,
    "+" Operator(Plus) 16..17,
    "2" Number(Decimal) 18..19,
    "-" Operator(Minus) 19..20,
    "0" Number(Decimal) 20..21,
    "" NewLine 21..21,
]
